CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(colhck)

# GLHCK options
SET(GLHCK_IMPORT_ASSIMP OFF CACHE BOOL "We don't need assimp")
SET(GLHCK_IMPORT_OPENCTM OFF CACHE BOOL "We don't need openctm")
SET(GLHCK_IMPORT_MMD OFF CACHE BOOL "We don't need mmd")
SET(GLHCK_IMPORT_BMP OFF CACHE BOOL "We don't need bmp")
SET(GLHCK_IMPORT_PNG OFF CACHE BOOL "We don't need png")
SET(GLHCK_IMPORT_TGA OFF CACHE BOOL "We don't need tga")
SET(GLHCK_IMPORT_JPEG OFF CACHE BOOL "We don't need jpeg")

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(test)
